# SAS

./: .gitignore  LICENSE  README.md
install/: install.sh  sasd.service
src/sas_commons/: pyproject.toml
src/sas_commons/sas_commons/: __init__.py  database.py
src/sas_commons/sas_commons/rules/: SendMessageRule.py  __init__.py
src/sas_commons/sas_commons/templates/: PersonTemplateArguments.py  Template.py  TemplateArguments.py  __init__.py
src/sas_commons/tests/: PersonTemplateArguments.py  SendMessageRule.py  Template.py  TemplateArguments.py
src/sas_control_panel/src/: index.html
src/sas_control_panel/src/css/: edit-people.css  edit-rule.css  edit-settings.css  edit-template.css  login.css  master.css  view.css
src/sas_control_panel/src/html/: edit-people.html  edit-rule.html  edit-settings.html  edit-template.html  view.html
src/sas_control_panel/src/js/: DOMList.js  common.js  edit-people.js  edit-rule.js  edit-settings.js  edit-template.js  login.js  sasapi.js  view.js
src/sas_daemon/: pyproject.toml
src/sas_daemon/sas_daemon/: Constants.py  SMSSender.py  __init__.py  daemon.py  database.py  datetimezone.py  main.py
src/sas_daemon/sas_daemon/api/: BasicAPI.py  Telnyx.py  __init__.py
src/sas_daemon/sas_daemon/rules/: SendMessageRule.py
src/sas_daemon/sas_daemon/security/: __init__.py  security.py  user.py
src/sas_daemon/sas_daemon/templates/: PersonTemplateArguments.py  Template.py  TemplateArguments.py  __init__.py
src/sas_daemon/sas_daemon/wsAPI/: parsers.py  server.py
src/sas_daemon/tests/: SMSSender.py
