[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sas_commons"]

[project]
name = "SAS-Commons"
version = "0.0.1"
description = "Common classes/functions for the SAS (Send Automated SMS) project"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["SAS", "Commons", "SMS", "Automated"]
authors = [
    { name = "Vbrawl", email = "konstantosjim@gmail.com" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "pytest"
]

[tool.pytest.ini_options]
testpaths = [
    "tests/*"
]