[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sas_daemon"]

[project]
name = "SAS-Daemon"
version = "0.0.1"
description = "Daemon for the SAS (Send Automated SMS) project"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["SAS", "Daemon", "SMS", "Automated"]
authors = [
    { name = "Vbrawl", email = "konstantosjim@gmail.com" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12"
]
dependencies = []

[project.scripts]
sas-daemon = "sas_daemon.main:start_daemon"